<resources>
    <string name="app_name">SkaterBay USA Code Reference</string>
    <string name="jump_Axel">Axel</string>
    <string name="jump_Toe">Toe</string>
    <string name="jump_Loop">Loop</string>
    <string name="jump_Flip">Flip</string>
    <string name="jump_Lutz">Lutz</string>
    <string name="jump_Salchow">Salchow</string>
    <string name="single">Single</string>
    <string name="duble">Double</string>
    <string name="triple">Triple</string>
    <string name="quad">Quad</string>
    <string name="level_B">B</string>
    <string name="level_1">1</string>
    <string name="level_2">2</string>
    <string name="level_3">3</string>
    <string name="level_4">4</string>
    <string name="spin_Upright">Upright</string>
    <string name="spin_Layback">Layback</string>
    <string name="spin_Camel">Camel</string>
    <string name="spin_Sit">Sit</string>
    <string name="spin_Combination">Combination</string>
    <string name="group_1">Group 1</string>
    <string name="group_2">Group 2</string>
    <string name="group_3">Group 3</string>
    <string name="group_4">Group 4</string>
    <string name="group_5">Group 5</string>
    <string name="b_lasso">Backwards Lasso</string>
    <string name="r_lasso">Reverse Lasso</string>
    <string name="s_lasso">Step In Lasso</string>
    <string name="backwards">Backward</string>
    <string name="forward">Forward</string>
    <string name="inside">Inside</string>
    <string name="outside">Outside</string>
    <string name="pairs_spin">Pairs Spin</string>
    <string name="pairs_combo_spin">Pairs Combination Spin</string>
    <string name="pivot">Pivot</string>
    <string name="steps">Steps</string>
    <string name="choreo">Choreo Sequence</string>

    <string-array name="elementTypes">
        <item>Jumps</item>
        <item>Spins</item>
        <item>Footwork</item>
        <item>Lifts</item>
        <item>Twists</item>
        <item>Throws</item>
        <item>Pairs Spins</item>
        <item>Death Spirals</item>
    </string-array>

    <string-array name="disciplines">
        <item>@string/ladies</item>
        <item>@string/men</item>
        <item>@string/pairs</item>
    </string-array>
    <string name="ladies">Ladies</string>
    <string name="men">Men</string>
    <string name="pairs">Pairs</string>

    <string-array name="programNames">
        <item>@string/program1</item>
        <item>@string/program2</item>
        <item>@string/program3</item>
        <item>@string/program4</item>
        <item>@string/program5</item>
        <item>@string/program6</item>
        <item>@string/program7</item>
        <item>@string/program8</item>
    </string-array>
    <string name="program1">Program 1</string>
    <string name="program2">Program 2</string>
    <string name="program3">Program 3</string>
    <string name="program4">Program 4</string>
    <string name="program5">Program 5</string>
    <string name="program6">Program 3</string>
    <string name="program7">Program 4</string>
    <string name="program8">Program 5</string>

    <string-array name="options">
        <item>@string/cancel</item>
        <item>@string/maybe</item>
        <item>@string/okay</item>
    </string-array>
    <string name="cancel">Cancel</string>
    <string name="maybe">Maybe</string>
    <string name="okay">OK</string>

    <!-- Menu items for toolbar -->
    <string name="action_elementLookup">Look up an element</string>
    <string name="action_settings">Settings</string>


    <string name="specialCharacter1"></string>


    <string-array name="segments">
        <item>@string/shortprogram</item>
        <item>@string/free</item>
    </string-array>
    <string name="shortprogram">Short</string>
    <string name="free">Free</string>

    <string-array name="levels">
        <item>@string/senior</item>
        <item>@string/junior</item>
        <item>@string/novice</item>
        <item>@string/intermediate</item>
        <item>@string/juvenile</item>
    </string-array>
    <string name="senior">Senior</string>
    <string name="junior">Junior</string>
    <string name="novice">Novice</string>
    <string name="intermediate">Intermediate</string>
    <string name="juvenile">Juvenile</string>

    <string-array name="tics">
        <item>\uFFEE</item>
        <item>!</item>
        <item>e</item>
        <item>\u003c</item>
        <item>\u003c\u003c</item>
    </string-array>


    <!-- Testing for syncing button names -->
    <string name="toggle_Button_Jump">toggle_Button_Jump</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_selected">Item Selected</string>

    <!-- Auth UI -->
    <string name="launch_title">FirebaseUI Auth Demo</string>
    <string name="sign_in_start">Start</string>
    <string name="sign_in_silent">Sign in silently</string>

    <string name="providers_header">Auth providers</string>
    <string name="providers_google">Google</string>
    <string name="providers_facebook">Facebook</string>
    <string name="providers_twitter">Twitter</string>
    <string name="providers_email">Email</string>
    <string name="providers_phone">Phone</string>

    <string name="theme_header">Theme</string>
    <string name="theme_default">Default theme</string>
    <string name="theme_purple">Purple Theme</string>
    <string name="theme_green">Green Theme</string>
    <string name="theme_dark">Dark Theme</string>

    <string name="logo_header">Logo</string>
    <string name="logo_firebase">Firebase Auth</string>
    <string name="logo_google">Google</string>
    <string name="logo_none">None</string>

    <string name="tos_header">Terms of Service URL</string>
    <string name="tos_google">Google</string>
    <string name="tos_firebase">Firebase</string>

    <string name="pp_header">Privacy Policy URL</string>
    <string name="pp_google">Google</string>
    <string name="pp_firebase">Firebase</string>

    <string name="google_scopes_header">Example extra Google scopes</string>
    <string name="google_scope_drive_file">Drive File</string>
    <string name="google_scope_youtube_data">Youtube data</string>

    <string name="facebook_permissions_header">Example extra Facebook permissions</string>
    <string name="facebook_permission_friends">Friends</string>
    <string name="facebook_permission_photos">Photos</string>

    <string name="options_header">Other Options</string>
    <string name="options_enable_credential_selector">Enable Smart Lock\'s credential selector</string>
    <string name="options_enable_hint_selector">Enable Smart Lock\'s hint selector</string>
    <string name="options_allow_new_email_acccount">Allow new account creation</string>
    <string name="options_require_name">Require first/last name with email accounts.</string>

    <string name="configuration_required">Configuration required - see README.md</string>
    <string name="google_label_missing_config">Google configuration missing</string>
    <string name="facebook_label_missing_config">Facebook configuration missing</string>
    <string name="twitter_label_missing_config">Twitter configuration missing</string>

    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">An unknown error occurred</string>

    <!-- Auth UI - Signed in -->
    <string name="signed_in_header">You are signed in!</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account_label">Delete account</string>

    <string name="sign_in_failed">Sign in failed</string>
    <string name="sign_out_failed">Sign out failed</string>
    <string name="delete_account_failed">Delete account failed</string>

    <string name="user_profile_header">User profile:</string>
    <string name="profile_picture_content_desc">Profile picture</string>
    <string name="used_providers">Providers used: %s</string>
    <string name="idp_token">IDP Token</string>
    <string name="idp_secret">IDP Secret</string>

    <string name="login_button">Login</string>
    <string name="welcome">Welcome to an inspirational community where you will experience everlasting upliftment</string>
    <string name="unknown_response">Known response</string>
    <string name="signin_failed">Failed signin</string>
    <string name="user_profile">Welcome to your profile page</string>
    <string name="profile_title">User Profile</string>
    <string name="user_name">Inducesmile</string>
    <string name="logout">LOGOUT</string>
    <string name="delete_user">DELETE USER</string>
    <string name="sign_out_error">Failed to sign out</string>
    <string name="user_deletion_error">Failed to delete user</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_main2">Main2Activity</string>

</resources>
