<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".SelectRevolutionsFragment">

    <TextView
        android:id="@+id/textViewRevolutionsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/narrowTable"
        android:text="Revolutions"
        android:textColor="#fff" />

    <RadioGroup
        android:id="@+id/radioGroupRevs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/narrowTable"
        android:checkedButton="@+id/radioButtonJump1"
        android:gravity="left">

        <RadioButton
            android:id="@+id/radioButtonRevs1"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/narrowTable"
            android:gravity="start"
            android:text="@string/single" />

        <RadioButton
            android:id="@+id/radioButtonRevs2"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/narrowTable"
            android:gravity="start"
            android:text="@string/duble" />

        <RadioButton
            android:id="@+id/radioButtonRevs3"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/narrowTable"
            android:gravity="start"
            android:text="@string/triple" />

        <RadioButton
            android:id="@+id/radioButtonRevs4"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/narrowTable"
            android:gravity="start"
            android:text="@string/quad" />
    </RadioGroup>
</LinearLayout>