<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".SelectGroupFragment">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/mediumBorder"
        android:gravity="center"
        android:text="Group"
        android:textColor="@color/white" />

    <RadioGroup
        android:id="@+id/radioGroupGroups"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/narrowTable"
        android:checkedButton="@+id/radioButtonGroup1"
        android:textColor="@color/white"
        android:buttonTint="@color/white"
        android:gravity="start">

        <RadioButton
            android:id="@+id/radioButtonGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/narrowTable"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:text="@string/group_1" />

        <RadioButton
            android:id="@+id/radioButtonGroup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/narrowTable"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:text="@string/group_2" />

        <RadioButton
            android:id="@+id/radioButtonGroup3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/narrowTable"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:text="@string/group_3" />

        <RadioButton
            android:id="@+id/radioButtonGroup4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/narrowTable"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:text="@string/group_4" />

        <RadioButton
            android:id="@+id/radioButtonGroup5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/narrowTable"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:checked="true"
            android:text="@string/group_5"/>

    </RadioGroup>

</LinearLayout>