<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".SelectSpinNameFragment">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/mediumBorder"
        android:gravity="center"
        android:text="Spin Names"
        android:textColor="@color/white" />

    <RadioGroup
        android:id="@+id/radioGroupSpinNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/narrowTable"
        android:checkedButton="@+id/radioButtonSpinName1"
        android:textColor="@color/white"
        android:buttonTint="@color/white"
        android:checked="true"
        android:gravity="start">

        <RadioButton
            android:id="@+id/radioButtonSpinName1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/narrowTable"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:text="@string/spin_Camel" />

        <RadioButton
            android:id="@+id/radioButtonSpinName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/narrowTable"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:text="@string/spin_Layback" />

        <RadioButton
            android:id="@+id/radioButtonSpinName3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/narrowTable"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:text="@string/spin_Sit" />

        <RadioButton
            android:id="@+id/radioButtonSpinName4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/narrowTable"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:text="@string/spin_Upright" />

        <RadioButton
            android:id="@+id/radioButtonSpinName5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/narrowTable"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:text="@string/spin_Combination" />

    </RadioGroup>

</LinearLayout>