<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/button_box_default"
    android:orientation="horizontal"
    tools:context=".SelectLevelFragment">

    <RadioGroup
        android:id="@+id/radioGroupLevels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/narrowTable"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonLevelB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/narrowTable"
            android:layout_weight="1"
            android:background="@drawable/toggle_button_box_default"
            android:button="@drawable/toggle_button_box_default"
            android:checked="true"
            android:gravity="center_vertical"
            android:text="@string/level_B"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/radioButtonLevel1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/narrowTable"
            android:layout_weight="1"
            android:background="@drawable/toggle_button_box_default"
            android:button="@drawable/toggle_button_box_default"
            android:gravity="center_vertical"
            android:text="@string/level_1"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/radioButtonLevel2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/narrowTable"
            android:layout_weight="1"
            android:background="@drawable/toggle_button_box_default"
            android:button="@drawable/toggle_button_box_default"
            android:gravity="center_vertical"
            android:text="@string/level_2"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/radioButtonLevel3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/narrowTable"
            android:layout_weight="1"
            android:background="@drawable/toggle_button_box_default"
            android:button="@drawable/toggle_button_box_default"
            android:gravity="center_vertical"
            android:text="@string/level_3"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/radioButtonLevel4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/narrowTable"
            android:layout_weight="1"
            android:background="@drawable/toggle_button_box_default"
            android:button="@drawable/toggle_button_box_default"
            android:gravity="center_vertical"
            android:text="@string/level_4"
            android:textAlignment="center"
            android:textColor="@color/white" />

    </RadioGroup>

</LinearLayout>