<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="horizontal">

            <Button
            android:id="@+id/buttonBarCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/largeTable"
            android:layout_weight="1"
            android:background="@drawable/button_capsule_default"
            android:checked="true"
            android:gravity="center_vertical"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/buttonBarMaybe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/largeTable"
            android:layout_weight="1"
            android:background="@drawable/button_capsule_default"
            android:gravity="center_vertical"
            android:text="@string/maybe"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/buttonBarOK"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/largeTable"
            android:layout_weight="1"
            android:background="@drawable/button_capsule_default"
            android:gravity="center_vertical"
            android:text="@string/okay"
            android:textAlignment="center"
            android:textColor="@color/white" />

</LinearLayout>