<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:context=".SelectLiftNameFragment">

    <RadioGroup
        android:id="@+id/radioGroupLiftNames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/narrowTable"
        android:background="@drawable/button_box_default"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/radioButtonLiftName1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/narrowTable"
            android:layout_weight="1"
            android:background="@drawable/toggle_button_box_default"
            android:button="@drawable/toggle_button_box_default"
            android:checked="true"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:text="@string/b_lasso" />

        <RadioButton
            android:id="@+id/radioButtonLiftName2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/narrowTable"
            android:layout_weight="1"
            android:background="@drawable/toggle_button_box_default"
            android:button="@drawable/toggle_button_box_default"
            android:checked="true"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:text="@string/r_lasso" />

        <RadioButton
            android:id="@+id/radioButtonLiftName3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/narrowTable"
            android:layout_weight="1"
            android:background="@drawable/toggle_button_box_default"
            android:button="@drawable/toggle_button_box_default"
            android:checked="true"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:text="@string/s_lasso" />

        <RadioButton
            android:id="@+id/radioButtonLiftName4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/narrowTable"
            android:layout_weight="1"
            android:background="@drawable/toggle_button_box_default"
            android:button="@drawable/toggle_button_box_default"
            android:checked="true"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:text="@string/jump_Toe" />

        <RadioButton
            android:id="@+id/radioButtonLiftName5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/narrowTable"
            android:layout_weight="1"
            android:background="@drawable/toggle_button_box_default"
            android:button="@drawable/toggle_button_box_default"
            android:checked="true"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:text="@string/jump_Axel" />

    </RadioGroup>

</LinearLayout>