<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".SelectPairSpinNameFragment">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/mediumBorder"
        android:gravity="center"
        android:text="Pair Spin Names"
        android:textColor="@color/white" />

    <RadioGroup
        android:id="@+id/radioGroupPairSpinNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/narrowTable"
        android:checkedButton="@+id/radioButtonPairSpinName1"
        android:textColor="@color/white"
        android:buttonTint="@color/white"
        android:gravity="start">

        <RadioButton
            android:id="@+id/radioButtonPairSpinName1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/narrowTable"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:checked="true"
            android:text="@string/pairs_spin" />

        <RadioButton
            android:id="@+id/radioButtonPairSpinName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/narrowTable"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:text="@string/pairs_combo_spin" />

        <RadioButton
            android:id="@+id/radioButtonPairSpinName3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/narrowTable"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:text="@string/pivot" />
    </RadioGroup>

</LinearLayout>